# word-generator-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  api.py  app.py  batch_generate.py  build.py  classify_db_generated.py  classify_db_real.py  clean_db_generated.py  clean_db_real.py  config.py  delete_duplicates_fr.py  dictionary_to_db.py  docker-compose.yml  models.py  pyproject.toml  requirements.txt  tweet.py  tweet_en.py  tweet_fr.py
.github/workflows/: deploy.yml  deploy_main.yml  deploy_on_tag.yml
commands/: batch_generate.py  build.py  build_proba_file.py  classify_db.py  classify_db_generated.py  clean_db_generated.py  clean_db_real.py  delete_duplicates_fr.py  dictionary_to_db.py  tweet.py
common/: __init__.py  authenticate.py  capitalize.py  db.py  generate.py  generate_word.py  prepare_db.py  real_word.py  style_text.py  summarize.py  tweet.py  wikipedia.py
en/: __init__.py  alter_text.py  classify.py  generate_definition.py  generate_tweet.py  get_definition.py
en/data/: alphabet_EN.json  dictionary-trimmed_EN.txt  proba_table_2char_EN.json
es/data/: alphabet_ES.json  proba_table_2char_ES.json
fr/: __init__.py  alter_text.py  classify.py  correct_text.py  generate_definition.py  generate_tweet.py
fr/data/: adverbs_FR.txt  alphabet_FR.json  proba_table_1char_FR.json  proba_table_2char_FR.json
fr/treetagger/: .gitignore  install-tagger-fr-linux.sh  install-tagger-fr-macos.sh
helpers/: generate.py
it/data/: alphabet_IT.json  dictionary_IT.txt  proba_table_2char_IT.json
migrations/: 20240320_add_language_model.py
scripts/: cron-entrypoint.sh
