[project]
name = "word-generator-api"
version = "1.5.7"
description = "Generates words that don't exist but sound English, French, Spanish or Italian, along with their altered dictionary definitions."
authors = [{ name = "Adrien Carpentier", email = "me@adriencarpentier.com" }]
dependencies = [
    "asyncpg>=0.27.0",
    "fastapi<1.0.0,>=0.93.0",
    "gunicorn<21.0.0,>=20.1.0",
    "nltk<4.0,>=3.7",
    "requests<3.0.0,>=2.27.1",
    "slowapi<1.0.0,>=0.1.5",
    "sentry-sdk>=2.10.0",
    "spacy<4.0.0,>=3.2.4",
    "tqdm<5.0.0,>=4.63.0",
    "tortoise-orm>=0.19.3",
    "typer<1.0.0,>=0.4.0",
    "tweepy<5.0.0,>=4.6.0",
    "uvicorn<1.0.0,>=0.17.5",
    "spacy-lefff>=0.5.1",
]
requires-python = ">=3.11,<3.12"

[project.urls]
Homepage = ""

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
rye = { dev-dependencies = ["pre-commit>=3.7.1", "ruff>=0.5.4"] }

[tool.pdm]
includes = []

[tool.pdm.dev-dependencies]
dev = ["pre-commit>=3.7.1", "ruff>=0.5.4"]

[tool.ruff]
lint = { select = ["I"] }
line-length = 100
