[project]
name = "word-generator-api"
version = "1.7.5"
description = "Generates words that don't exist but sound English, French, Spanish or Italian, along with their altered dictionary definitions."
authors = [{ name = "Adrien Carpentier", email = "me@adriencarpentier.com" }]
dependencies = [
    "asyncpg>=0.27.0",
    "fastapi<1.0.0,>=0.93.0",
    "gunicorn<21.0.0,>=20.1.0",
    "httpx>=0.24.0",
    "nltk<4.0,>=3.7",
    "python-dotenv>=1.1.0",
    "slowapi<1.0.0,>=0.1.5",
    "sentry-sdk>=2.10.0",
    "spacy<4.0.0,>=3.8.3",
    "tqdm<5.0.0,>=4.63.0",
    "tortoise-orm>=0.19.3",
    "typer<1.0.0,>=0.4.0",
    "tweepy<5.0.0,>=4.6.0",
    "uvicorn<1.0.0,>=0.17.5",
    "spacy-lefff>=0.5.1",
]
requires-python = ">=3.10,<3.13"

[tool.ruff]
lint = { select = ["I", "PTH"] }
line-length = 100

[tool.uv]
dev-dependencies = ["ruff>=0.12.0"]
